<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quero Doar</string>
    <string name="title_section1">Produtos</string>
    <string name="title_section2">Instituições</string>
    <string name="title_section3">Doar</string>
    <string name="title_section4">Pontos</string>
    <string name="title_section5">Cidades</string>
    <string name="title_section6">Desafiar Amigos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ex">ExActivity</string>
    <string name="title_activity_account">A minha conta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Ex act</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="news_feed">Feed de Notícias</string>

    <!-- Navigation Drawer -->
    <string name="nav_drawer_1">Feed de Notícias</string>
    <string name="nav_drawer_2">A minha conta</string>
    <string name="nav_drawer_3">Definições</string>
    <string name="nav_drawer_4">Sobre nós</string>
    <string name="title_activity_sign_up">Registrar</string>

    <!-- SignUp -->
    <string name="signup_institution">Instituição</string>
    <string name="signup_single">Individual</string>
    <string name="signup_single_firstname">Nome próprio</string>
    <string name="signup_single_lastname">Apelido</string>
    <string name="signup_single_email">Email</string>
    <string name="signup_single_password">Palavra-passe</string>
    <string name="signup_single_confirm_password">Confirmar palavra-passe</string>
    <string name="signup_single_anon">Anonimato</string>
    <string name="signup_single_createaccount">SUBMETER</string>

    <!-- Login -->
    <string name="welcome_login">Já tem conta? Faça <a href="pt.ua.querodoar">login!</a></string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Palavra-passe</string>
    <string name="action_sign_in_short">Login</string>
    <string name="orText">Ou</string>
    <string name="action_register">Registe-se</string>
    <string name="forget_password">Recuperar palavra-passe</string>
    <string name="institutionRegister">Quer fazer parte do Quero Doar?</string>
    <string name="institutionRegisterWebsite">Visite o nosso site em</string>
    <string name="institutionRegisterWebsiteLink"><a href="http://querodoar.parseapp.com/">http://querodoar.parseapp.com/</a></string>

    <!-- Strings related to login -->
    <!-- TODO -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Palavra-passe</string>
    <string name="action_sign_in_register"><b>Login</b> ou registrar</string>
    <string name="menu_forgot_password">Recuperar palavra-passe</string>
    <string name="login_progress_signing_in">A ligar&#8230;</string>
    <string name="login_progress_password_email">A enviar email&#8230;</string>
    <string name="error_invalid_email">Este email é invalido</string>
    <string name="error_duplicate_email">Este email já foi usado</string>
    <string name="error_duplicate_username">Este username já foi usado</string>
    <string name="error_incorrect_password">A palavra-passe está incorreta</string>
    <string name="error_invalid_password">Esta palavra-passe é demasiado curta</string>
    <string name="error_invalid_confirm_password">As palavras-passe não são iguais</string>
    <string name="error_field_required">Este campo é necessário</string>

    <!-- Strings related to DonationList -->
    <string name="donationlist_1">Produtos</string>
    <string name="donationlist_2">Instituições</string>
    <string name="donationlist_3">Distritos</string>

    <!-- Buttons -->
    <string name="btn_donate">QUERO DOAR!</string>
    <string name="btn_requests">VER PEDIDOS</string>
    <string name="donate">DOAR</string>
    <string name="submit_edit">SUBMETER</string>

    <!-- Action Menu -->
    <string name="action_account">A minha conta</string>
    <string name="action_history">Histórico de doações</string>
    <string name="action_about">Sobre nós</string>
    <string name="action_logout">Logout</string>
    <string name="action_exit">Sair</string>

    <!-- Messages -->
    <string name="loading_news">A carregar notícias...</string>
    <string name="loading">A carregar...</string>

    <string-array name="cities">
        <item>Angra do Heroísmo</item>
        <item>Aveiro</item>
        <item>Beja</item>
        <item>Braga</item>
        <item>Bragança</item>
        <item>Castelo Branco</item>
        <item>Coimbra</item>
        <item>Faro</item>
        <item>Funchal</item>
        <item>Guarda</item>
        <item>Horta</item>
        <item>Lamego</item>
        <item>Leiria</item>
        <item>Lisboa</item>
        <item>Ponta Delgada</item>
        <item>Portalegre</item>
        <item>Porto</item>
        <item>Santarém</item>
        <item>Setúbal</item>
    </string-array>

    <string name="thankyou">OBRIGADO PELO SEU DONATIVO!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_donation_list">Lista</string>
    <string name="title_activity_institution">Instituição</string>
    <string name="title_activity_institution_requests">InstitutionRequestsActivity</string>
    <string name="title_activity_request">Doação do pedido</string>
    <string name="title_activity_request_progress">RequestProgressActivity</string>
    <string name="title_activity_thanks">Obrigado!</string>
    <string name="title_activity_donation_list_by_cities">Instituições por Cidade</string>
    <string name="title_activity_request_list">Lista de pedidos</string>
    <string name="title_activity_about">Sobre nós</string>

</resources>