<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
       android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="0dp" >

        <LinearLayout
            android:id="@+id/linearLayout1"
             android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="vertical"
            android:padding="20dp" >

            <EditText
                android:id="@+id/txtEditSingleFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_single_firstname"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtEditSingleLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_single_lastname"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtEditSingleEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/signup_single_email"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtEditSinglePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_single_password"
                android:inputType="textPassword"
                android:textSize="16sp" />
            
            <EditText
                android:id="@+id/txtEditSinglePasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signup_single_confirm_password"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spEditSingleCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/cities"
                android:textSize="16sp" />

            <!-- android:entries="@array/cities" -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lblEditSingleAnon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_single_anon"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="16sp" />

                <ToggleButton
                    android:id="@+id/tbEditSingleAnon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnEditAccount"
            style="@style/ButtonAppThemeColor"
             android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text="@string/submit_edit"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>

