<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/institutionRegister"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/apptheme_color"
        android:textSize="@dimen/titles" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/institutionRegisterWebsite"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/apptheme_color"
        android:textSize="@dimen/titles" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:autoLink="web"
        android:text="@string/institutionRegisterWebsiteLink"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/apptheme_color"
        android:textSize="@dimen/titles" />

</LinearLayout>